--- a/meshr/inst/doc/MeSH.tex
+++ b/meshr/inst/doc/MeSH.tex
@@ -619,18 +619,19 @@ $\bf{listDatabases}$ function returns the source of data (figure 3). In regard t
 1                          Arabidopsis thaliana
 2  Bacillus subtilis subsp. spizizenii str. 168
 3                                    Bos taurus
-4                                   Danio rerio
-5                       Drosophila melanogaster
-6      Escherichia coli str K-12 substr. MG1655
-7                                 Gallus gallus
-8                                  Homo sapiens
-9                                  Mus musculus
-10                            Rattus norvegicus
-11               Saccharomyces cerevisiae S288c
-12              Schizosaccharomyces pombe 972h-
-13                                   Sus scrofa
-14                               Xenopus laevis
-15                                  gene2pubmed
+4                        Caenorhabditis elegans
+5                                   Danio rerio
+6                       Drosophila melanogaster
+7      Escherichia coli str K-12 substr. MG1655
+8                                 Gallus gallus
+9                                  Homo sapiens
+10                                 Mus musculus
+11                            Rattus norvegicus
+12               Saccharomyces cerevisiae S288c
+13              Schizosaccharomyces pombe 972h-
+14                                   Sus scrofa
+15                               Xenopus laevis
+16                                  gene2pubmed
 \end{Soutput}
 \begin{Sinput}
 > listDatabases(org.MeSH.Atu.K84.db)
@@ -737,7 +738,7 @@ mGMSHP+ 					maintainer = "Koki Tsuyuzaki <k.t.the-answer@hotmail.co.jp>",
 mGMSHP+ 					author = "Koki Tsuyuzaki",
 mGMSHP+ 					destDir = destination,
 mGMSHP+ 					license="Artistic-2.0")
-Creating package in /var/folders/k0/tk8gl4bj2_v2mbjx80ydsznw0000gn/T//RtmpbFJALZ/file7d0f12c38916/org.MeSH.Pae.db 
+Creating package in /var/folders/k0/tk8gl4bj2_v2mbjx80ydsznw0000gn/T//RtmpxBOIcV/file14e149e896e0/org.MeSH.Pae.db 
 [1] TRUE
 \end{Soutput}
 \end{Schunk}
@@ -797,7 +798,7 @@ We proceed to uncover a characteristic of MeSH terms that the set of identified 
 
 We create a parameter instance by specifying the objects of selected and universal genes, the name of the annotation package, the category of MeSH, the database of correspondence between Gene IDs and MeSH IDs (see also \textbf{listDatabases} in the section 2.2.1), $p$-value cutoff, and the choice of a multiple-testing correction method.
 In this first example, we use \Rpackage{org.MeSH.Hsa.db} because the above RNA-seq data is extracted from human cells.
-We choose D (Drugs and chemicals) category, gendoo database, $p$-value cutoff 0.05, and no multiple-testing adjustment.
+We choose C (Diseases) category, gendoo database, $p$-value cutoff 0.05, and no multiple-testing adjustment.
 For more details on description of all the arguments, readers are referred to the \textbf{MeSHHyperGParams-class}
 help page.
 
@@ -806,7 +807,7 @@ help page.
 \begin{Sinput}
 > meshParams <- new("MeSHHyperGParams", geneIds = sig.geneid.cummeRbund[, 
 +     2], universeGeneIds = geneid.cummeRbund[, 2], annotation = "org.MeSH.Hsa.db", 
-+     category = "D", database = "gendoo", pvalueCutoff = 0.05, 
++     category = "C", database = "gendoo", pvalueCutoff = 0.05, 
 +     pAdjust = "none")
 \end{Sinput}
 \end{Schunk}
@@ -831,10 +832,10 @@ the choice of a MeSH category, the annotation data used, and a total number of i
 > meshR
 \end{Sinput}
 \begin{Soutput}
-MeSH enrichment analysis for category Chemicals and Drugs 
+MeSH enrichment analysis for category Diseases 
 Annotation package used:  org.MeSH.Hsa.db 
 The correspondance is retrived from:  gendoo 
-Number of MeSH terms identified:  9 
+Number of MeSH terms identified:  22 
 \end{Soutput}
 \end{Schunk}
 \end{center}
@@ -848,20 +849,13 @@ This presents significantly enriched MeSH ID, MeSH term, and their associated $p
 > head(summary(meshR))
 \end{Sinput}
 \begin{Soutput}
-       MESHID      Pvalue OddsRatio ExpCount Count Size        MESHTERM GENEID
-38752 D011494 1.23822e-05  5.663957 10.64026    22   31 Protein Kinases   9077
-38753 D011494 1.23822e-05  5.663957 10.64026    22   31 Protein Kinases  26574
-38754 D011494 1.23822e-05  5.663957 10.64026    22   31 Protein Kinases   1969
-38755 D011494 1.23822e-05  5.663957 10.64026    22   31 Protein Kinases   5174
-38756 D011494 1.23822e-05  5.663957 10.64026    22   31 Protein Kinases   6890
-38757 D011494 1.23822e-05  5.663957 10.64026    22   31 Protein Kinases   5525
-      SOURCEID
-38752     <NA>
-38753     <NA>
-38754     <NA>
-38755     <NA>
-38756     <NA>
-38757     <NA>
+   MESHID                        MESHTERM       PVALUE
+1 D009361           Neoplasm Invasiveness 0.0002619206
+2 D002471 Cell Transformation, Neoplastic 0.0042518253
+3 D011471             Prostatic Neoplasms 0.0055525705
+4 D008545                        Melanoma 0.0080760710
+5 D000544               Alzheimer Disease 0.0136904788
+6 D006984                     Hypertrophy 0.0193805394
 \end{Soutput}
 \end{Schunk}
 \end{center}
@@ -881,7 +875,7 @@ For example, to choose the category as G (Phenomena and Processes) and the datab
 MeSH enrichment analysis for category Phenomena and Processes 
 Annotation package used:  org.MeSH.Hsa.db 
 The correspondance is retrived from:  gene2pubmed 
-Number of MeSH terms identified:  9 
+Number of MeSH terms identified:  1 
 \end{Soutput}
 \end{Schunk}
 \end{center}
@@ -906,7 +900,7 @@ attached base packages:
 [8] methods   base     
 
 other attached packages:
- [1] meshr_1.2.1               org.Hs.eg.db_2.14.0      
+ [1] meshr_1.0.4               org.Hs.eg.db_2.14.0      
  [3] cummeRbund_2.6.1          Gviz_1.8.4               
  [5] rtracklayer_1.24.2        GenomicRanges_1.16.4     
  [7] IRanges_1.22.10           fastcluster_1.1.13       
@@ -915,16 +909,16 @@ other attached packages:
 [13] Matrix_1.1-4              AnnotationDbi_1.26.1     
 [15] GenomeInfoDb_1.0.2        Biobase_2.24.0           
 [17] BiocGenerics_0.10.0       fdrtool_1.2.12           
-[19] org.MeSH.Syn.db_1.2.0     org.MeSH.Bsu.168.db_1.2.0
-[21] org.MeSH.Atu.K84.db_1.2.0 org.MeSH.Aca.db_1.2.0    
-[23] org.MeSH.Hsa.db_1.2.0     RSQLite_1.0.0            
+[19] org.MeSH.Syn.db_1.0.0     org.MeSH.Bsu.168.db_1.0.0
+[21] org.MeSH.Atu.K84.db_1.0.0 org.MeSH.Aca.db_1.0.0    
+[23] org.MeSH.Hsa.db_1.0.0     RSQLite_1.0.0            
 [25] DBI_0.3.1                 MeSH.PCR.db_1.2.0        
 [27] MeSH.AOR.db_1.2.0         MeSH.db_1.2.0            
 [29] MeSHDbi_1.2.1            
 
 loaded via a namespace (and not attached):
  [1] acepack_1.3-3.3          annotate_1.42.1          base64enc_0.1-2         
- [4] BatchJobs_1.4            BBmisc_1.7               BiocParallel_0.6.1      
+ [4] BatchJobs_1.5            BBmisc_1.8               BiocParallel_0.6.1      
  [7] biomaRt_2.20.0           Biostrings_2.32.1        biovizBase_1.12.3       
 [10] bitops_1.0-6             brew_1.0-6               BSgenome_1.32.0         
 [13] checkmate_1.5.0          cluster_1.15.3           codetools_0.2-9         
