--- a/meshr/vignettes/MeSH.tex
+++ b/meshr/vignettes/MeSH.tex
@@ -160,8 +160,23 @@ ls function shows all objects in this package. MeSH.db object is generated. This
 \begin{Schunk}
 \begin{Sinput}
 > ls("package:MeSH.db")
+\end{Sinput}
+\begin{Soutput}
+[1] "MeSH.db"
+\end{Soutput}
+\begin{Sinput}
 > MeSH.db
 \end{Sinput}
+\begin{Soutput}
+[1] "##### class ####"
+[1] "MeSHDb"
+attr(,"package")
+[1] "MeSHDbi"
+[1] "##### connection #####"
+<SQLiteConnection>
+[1] "##### package name #####"
+[1] "MeSH.db"
+\end{Soutput}
 \end{Schunk}
 \end{center}
 
@@ -173,6 +188,10 @@ $\bf{columns}$ returns the rows which we can retrieve in MeSH.db.
 \begin{Sinput}
 > columns(MeSH.db)
 \end{Sinput}
+\begin{Soutput}
+[1] "MESHID"      "MESHTERM"    "CATEGORY"    "SYNONYM"     "QUALIFIERID"
+[6] "QUALIFIER"  
+\end{Soutput}
 \end{Schunk}
 \end{center}
 
@@ -183,6 +202,10 @@ $\bf{keytypes}$ returns the rows which can be used as the optional parameter in 
 \begin{Sinput}
 > keytypes(MeSH.db)
 \end{Sinput}
+\begin{Soutput}
+[1] "MESHID"      "MESHTERM"    "CATEGORY"    "SYNONYM"     "QUALIFIERID"
+[6] "QUALIFIER"  
+\end{Soutput}
 \end{Schunk}
 \end{center}
 
@@ -193,8 +216,16 @@ $\bf{keys}$ function returns the value of keytype.
 \begin{Sinput}
 > k <- keys(MeSH.db, keytype = "MESHID")
 > length(k)
+\end{Sinput}
+\begin{Soutput}
+[1] 27149
+\end{Soutput}
+\begin{Sinput}
 > head(k)
 \end{Sinput}
+\begin{Soutput}
+[1] "D000001" "D000002" "D000003" "D000004" "D000005" "D000006"
+\end{Soutput}
 \end{Schunk}
 \end{center}
 
@@ -205,6 +236,19 @@ $\bf{select}$ function returns rows in particular columns, which are having user
 > select(MeSH.db, keys = k[1:10], columns = c("MESHID", "MESHTERM"), 
 +     keytype = "MESHID")
 \end{Sinput}
+\begin{Soutput}
+     MESHID               MESHTERM
+1   D000001             Calcimycin
+141 D000002                Temefos
+219 D000003              Abattoirs
+246 D000004 Abbreviations as Topic
+255 D000005                Abdomen
+271 D000006         Abdomen, Acute
+382 D000007     Abdominal Injuries
+493 D000008    Abdominal Neoplasms
+619 D000009      Abdominal Muscles
+700 D000010         Abducens Nerve
+\end{Soutput}
 \end{Schunk}
 \end{center}
 
@@ -221,6 +265,20 @@ $\bf{select}$ function retrieves rows in which MESHTERM is "$Leukemia$" in the M
 +     "MESHTERM", "CATEGORY", "SYNONYM"), keytype = "MESHTERM")
 > LEU
 \end{Sinput}
+\begin{Soutput}
+     MESHID MESHTERM CATEGORY
+1   D007938 Leukemia        C
+38  D007938 Leukemia        C
+75  D007938 Leukemia        C
+112 D007938 Leukemia        C
+149 D007938 Leukemia        C
+                                                 SYNONYM
+1                                        Leucocythaemias
+38  Leucocythaemia|T191|NON|EQV|NLM (2012)|110224|abcdef
+75                                        Leucocythemias
+112  Leucocythemia|T191|NON|EQV|NLM (2012)|110224|abcdef
+149                                            Leukemias
+\end{Soutput}
 \end{Schunk}
 \end{center}
 
@@ -236,6 +294,10 @@ As mentioned above, MeSH has hierarchical structures. \Rpackage{MeSH.AOR.db} and
 +     "OFFSPRING"), keytype = "OFFSPRING")
 > ANC
 \end{Sinput}
+\begin{Soutput}
+  ANCESTOR OFFSPRING
+1  D009370   D007938
+\end{Soutput}
 \end{Schunk}
 \end{center}
 D009370 has found above $Leukemia$.\\
@@ -246,6 +308,10 @@ These MeSH IDs can be translated to MeSH Term.
 \begin{Sinput}
 > select(MeSH.db, keys = ANC[1, 1], columns = c("MESHTERM"), keytype = "MESHID")
 \end{Sinput}
+\begin{Soutput}
+                      MESHTERM
+1 Neoplasms by Histologic Type
+\end{Soutput}
 \end{Schunk}
 \end{center}
 In this way, we can specify that $Leukemia$ is categorized as one of $Neoplasms by Histologic Type$.
@@ -257,8 +323,34 @@ Once keytype-parameter set to opposite direction (OFFSPRING to ANCESTOR), other 
 > OFF <- select(MeSH.AOR.db, keys = "D007938", columns = c("ANCESTOR", 
 +     "OFFSPRING"), keytype = "ANCESTOR")
 > OFF
+\end{Sinput}
+\begin{Soutput}
+  ANCESTOR OFFSPRING
+1  D007938   D007942
+2  D007938   D007943
+3  D007938   D007945
+4  D007938   D007946
+5  D007938   D007951
+6  D007938   D007952
+7  D007938   D007953
+8  D007938   D016582
+9  D007938   D016583
+\end{Soutput}
+\begin{Sinput}
 > select(MeSH.db, keys = OFF[, 2], columns = c("MESHTERM"), keytype = "MESHID")
 \end{Sinput}
+\begin{Soutput}
+                        MESHTERM
+1         Leukemia, Experimental
+505         Leukemia, Hairy Cell
+764           Leukemia, Lymphoid
+1023         Leukemia, Mast-Cell
+1208           Leukemia, Myeloid
+2022       Leukemia, Plasma Cell
+2281 Leukemia, Radiation-Induced
+2466            Leukemia, Feline
+2571    Enzootic Bovine Leukosis
+\end{Soutput}
 \end{Schunk}
 \end{center}
 There are a lot of MeSH terms, which means $Leukemia$ has many lower hierarchies.\\
@@ -271,9 +363,29 @@ There are a lot of MeSH terms, which means $Leukemia$ has many lower hierarchies
 > CHI <- select(MeSH.PCR.db, keys = LEU[1, 1], columns = c("PARENT", 
 +     "CHILD"), keytype = "PARENT")
 > head(CHI)
+\end{Sinput}
+\begin{Soutput}
+   PARENT   CHILD
+1 D007938 D001353
+2 D007938 D001752
+3 D007938 D004915
+4 D007938 D007939
+5 D007938 D007940
+6 D007938 D007941
+\end{Soutput}
+\begin{Sinput}
 > head(select(MeSH.db, keys = CHI[, 2], columns = c("MESHTERM"), 
 +     keytype = "MESHID"))
 \end{Sinput}
+\begin{Soutput}
+                            MESHTERM
+1                     Avian Leukosis
+106                     Blast Crisis
+365  Leukemia, Erythroblastic, Acute
+1068                  Leukemia L1210
+1176                  Leukemia L5178
+1284                   Leukemia P388
+\end{Soutput}
 \end{Schunk}
 \end{center}
 
@@ -289,10 +401,37 @@ $dbInfo$ returns the information of the package. $dbfile$ returns the directory 
 \begin{Schunk}
 \begin{Sinput}
 > dbInfo(MeSH.db)
+\end{Sinput}
+\begin{Soutput}
+             NAME                                     VALUE
+1      SOURCEDATE                               19-Nov-2013
+2      SOURCENAME                  Medical Subject Headings
+3       SOURCEURL http://www.nlm.nih.gov/mesh/filelist.html
+4        DBSCHEMA                                   MeSH.db
+5 DBSCHEMAVERSION                                       1.0
+6     MESHVERSION                                      2014
+7         package                                   MeSH.db
+8         Db type                                   MeSH.Db
+\end{Soutput}
+\begin{Sinput}
 > dbfile(MeSH.db)
+\end{Sinput}
+\begin{Soutput}
+[1] "/Library/Frameworks/R.framework/Versions/3.1/Resources/library/MeSH.db/extdata/MeSH.db.sqlite"
+\end{Soutput}
+\begin{Sinput}
 > dbschema(MeSH.db)
+\end{Sinput}
+\begin{Soutput}
+[1] "CREATE TABLE DATA (\n  MESHID CHAR(7) NOT NULL,\n  MESHTERM VARCHAR(100) NOT NULL,\n  CATEGORY CHAR(1) NOT NULL,\n  SYNONYM VARCHAR(100),\n  QUALIFIERID CHAR(7),\n  QUALIFIER VARCHAR(100)\n)"
+[2] "CREATE TABLE METADATA (\n  NAME VARCHAR(80),\n  VALUE VARCHAR(255)\n)"                                                                                                                         
+\end{Soutput}
+\begin{Sinput}
 > dbconn(MeSH.db)
 \end{Sinput}
+\begin{Soutput}
+<SQLiteConnection>
+\end{Soutput}
 \end{Schunk}
 \end{center}
 
@@ -304,13 +443,48 @@ $dbschema$ shows the data is stored as a table named "DATA" in the sqlite databa
 > SQL1 <- paste("SELECT MESHTERM, QUALIFIERID, QUALIFIER FROM DATA", 
 +     "WHERE MESHID = 'D000001'", "AND QUALIFIERID = 'Q000494'")
 > dbGetQuery(dbconn(MeSH.db), SQL1)
+\end{Sinput}
+\begin{Soutput}
+    MESHTERM QUALIFIERID    QUALIFIER
+1 Calcimycin     Q000494 pharmacology
+2 Calcimycin     Q000494 pharmacology
+3 Calcimycin     Q000494 pharmacology
+4 Calcimycin     Q000494 pharmacology
+5 Calcimycin     Q000494 pharmacology
+\end{Soutput}
+\begin{Sinput}
 > SQL2 <- paste("SELECT ANCESTOR, OFFSPRING FROM DATA", "WHERE OFFSPRING = 'D000002'", 
 +     "OR OFFSPRING = 'D000003'", "OR OFFSPRING = 'D000004'", "OR ANCESTOR = 'D009275'")
 > dbGetQuery(dbconn(MeSH.AOR.db), SQL2)
+\end{Sinput}
+\begin{Soutput}
+  ANCESTOR OFFSPRING
+1  D063086   D000002
+2  D008462   D000003
+3  D009275   D000004
+4  D009275   D000851
+5  D009275   D004850
+\end{Soutput}
+\begin{Sinput}
 > SQL3 <- paste("SELECT PARENT, CHILD FROM DATA", "WHERE PARENT = 'D000005'", 
 +     "AND NOT CHILD = 'D004312'")
 > dbGetQuery(dbconn(MeSH.PCR.db), SQL3)
 \end{Sinput}
+\begin{Soutput}
+    PARENT   CHILD
+1  D000005 D006119
+2  D000005 D007264
+3  D000005 D008643
+4  D000005 D008646
+5  D000005 D009852
+6  D000005 D010529
+7  D000005 D010537
+8  D000005 D012187
+9  D000005 D014472
+10 D000005 D034841
+11 D000005 D034861
+12 D000005 D054048
+\end{Soutput}
 \end{Schunk}
 \end{center}
 
@@ -324,11 +498,34 @@ As well as \Rpackage{MeSH.db},  \Rpackage{MeSH.AOR.db}, and \Rpackage{MeSH.PCR.d
 \begin{Sinput}
 > library("org.MeSH.Hsa.db")
 > columns(org.MeSH.Hsa.db)
+\end{Sinput}
+\begin{Soutput}
+[1] "GENEID"       "MESHID"       "MESHCATEGORY" "SOURCEID"     "SOURCEDB"    
+\end{Soutput}
+\begin{Sinput}
 > keytypes(org.MeSH.Hsa.db)
+\end{Sinput}
+\begin{Soutput}
+[1] "GENEID"       "MESHID"       "MESHCATEGORY" "SOURCEID"     "SOURCEDB"    
+\end{Soutput}
+\begin{Sinput}
 > key_HSA <- keys(org.MeSH.Hsa.db, keytype = "MESHID")
 > select(MeSH.db, keys = key_HSA[1:10], columns = c("MESHID", "MESHTERM"), 
 +     keytype = "MESHID")
 \end{Sinput}
+\begin{Soutput}
+      MESHID                      MESHTERM
+1    D000001                    Calcimycin
+141  D000002                       Temefos
+219  D000005                       Abdomen
+235  D000006                Abdomen, Acute
+346  D000007            Abdominal Injuries
+457  D000008           Abdominal Neoplasms
+583  D000009             Abdominal Muscles
+664  D000010                Abducens Nerve
+1139 D000011 Abelson murine leukemia virus
+1178 D000012          Abetalipoproteinemia
+\end{Soutput}
 \end{Schunk}
 \end{center}
 Moreover, these packages have other additional functions like $\bf{species}$, $\bf{nomenclature}$, $\bf{listDatabases}$.
@@ -341,16 +538,64 @@ In each $org.MeSH.XXX.db$, $\bf{species}$ function returns the common name and $
 > library("org.MeSH.Bsu.168.db")
 > library("org.MeSH.Syn.db")
 > species(org.MeSH.Hsa.db)
+\end{Sinput}
+\begin{Soutput}
+[1] "Human"
+\end{Soutput}
+\begin{Sinput}
 > species(org.MeSH.Aca.db)
+\end{Sinput}
+\begin{Soutput}
+[1] "Lizard"
+\end{Soutput}
+\begin{Sinput}
 > species(org.MeSH.Atu.K84.db)
+\end{Sinput}
+\begin{Soutput}
+[1] NA
+\end{Soutput}
+\begin{Sinput}
 > species(org.MeSH.Bsu.168.db)
+\end{Sinput}
+\begin{Soutput}
+[1] NA
+\end{Soutput}
+\begin{Sinput}
 > species(org.MeSH.Syn.db)
+\end{Sinput}
+\begin{Soutput}
+[1] "Cyanobacteria"
+\end{Soutput}
+\begin{Sinput}
 > nomenclature(org.MeSH.Hsa.db)
+\end{Sinput}
+\begin{Soutput}
+[1] "Homo sapiens"
+\end{Soutput}
+\begin{Sinput}
 > nomenclature(org.MeSH.Aca.db)
+\end{Sinput}
+\begin{Soutput}
+[1] "Anolis carolinensis"
+\end{Soutput}
+\begin{Sinput}
 > nomenclature(org.MeSH.Atu.K84.db)
+\end{Sinput}
+\begin{Soutput}
+[1] "Agrobacterium Tumefacienes K84"
+\end{Soutput}
+\begin{Sinput}
 > nomenclature(org.MeSH.Bsu.168.db)
+\end{Sinput}
+\begin{Soutput}
+[1] "Bacillus subtilis subsp. spizizenii str. 168"
+\end{Soutput}
+\begin{Sinput}
 > nomenclature(org.MeSH.Syn.db)
 \end{Sinput}
+\begin{Soutput}
+[1] "Synechocystis"
+\end{Soutput}
 \end{Schunk}
 \end{center}
 
@@ -360,11 +605,68 @@ $\bf{listDatabases}$ function returns the source of data (figure 3). In regard t
 \begin{Schunk}
 \begin{Sinput}
 > listDatabases(org.MeSH.Hsa.db)
+\end{Sinput}
+\begin{Soutput}
+     SOURCEDB
+1      gendoo
+2 gene2pubmed
+\end{Soutput}
+\begin{Sinput}
 > listDatabases(org.MeSH.Aca.db)
+\end{Sinput}
+\begin{Soutput}
+                                       SOURCEDB
+1                          Arabidopsis thaliana
+2  Bacillus subtilis subsp. spizizenii str. 168
+3                                    Bos taurus
+4                                   Danio rerio
+5                       Drosophila melanogaster
+6      Escherichia coli str K-12 substr. MG1655
+7                                 Gallus gallus
+8                                  Homo sapiens
+9                                  Mus musculus
+10                            Rattus norvegicus
+11               Saccharomyces cerevisiae S288c
+12              Schizosaccharomyces pombe 972h-
+13                                   Sus scrofa
+14                               Xenopus laevis
+15                                  gene2pubmed
+\end{Soutput}
+\begin{Sinput}
 > listDatabases(org.MeSH.Atu.K84.db)
+\end{Sinput}
+\begin{Soutput}
+                                       SOURCEDB
+1                          Arabidopsis thaliana
+2  Bacillus subtilis subsp. spizizenii str. 168
+3                                    Bos taurus
+4                        Caenorhabditis elegans
+5                                   Danio rerio
+6                       Drosophila melanogaster
+7      Escherichia coli str K-12 substr. MG1655
+8                                 Gallus gallus
+9                                  Homo sapiens
+10                                 Mus musculus
+11                            Rattus norvegicus
+12               Saccharomyces cerevisiae S288c
+13              Schizosaccharomyces pombe 972h-
+14                                   Sus scrofa
+15                               Xenopus laevis
+\end{Soutput}
+\begin{Sinput}
 > listDatabases(org.MeSH.Bsu.168.db)
+\end{Sinput}
+\begin{Soutput}
+     SOURCEDB
+1 gene2pubmed
+\end{Soutput}
+\begin{Sinput}
 > listDatabases(org.MeSH.Syn.db)
 \end{Sinput}
+\begin{Soutput}
+  SOURCEDB
+1   gendoo
+\end{Soutput}
 \end{Schunk}
 \end{center}
 
@@ -408,16 +710,17 @@ mGMSHP> # We are also needed to prepare meta data as follows.
 mGMSHP> data(metaPAO1)
 
 mGMSHP> metaPAO1
-             NAME                                 VALUE
-1      SOURCEDATE                          31-July-2013
-2      SOURCENAME                                BLASTP
-3       SOURCEURL ftp://ftp.ncbi.nlm.nih.gov/gene/DATA/
-4        DBSCHEMA                  org.Pae.PAO1.MeSH.db
-5 DBSCHEMAVERSION                                   1.0
-6        ORGANISM           Pseudomonas aeruginosa PAO1
-7         SPECIES                                      
-8         package                         AnnotationDbi
-9         Db type                               BLASTDb
+              NAME                                 VALUE
+1       SOURCEDATE                          31-July-2013
+2       SOURCENAME                                BLASTP
+3        SOURCEURL ftp://ftp.ncbi.nlm.nih.gov/gene/DATA/
+4         DBSCHEMA                  org.Pae.PAO1.MeSH.db
+5  DBSCHEMAVERSION                                   1.0
+6         ORGANISM           Pseudomonas aeruginosa PAO1
+7          SPECIES                                      
+8          package                         AnnotationDbi
+9          Db type                               BLASTDb
+10     MESHVERSION                                  2014
 
 mGMSHP> ## sets up a temporary directory for this example
 mGMSHP> ## (users won't need to do this step)
@@ -435,7 +738,7 @@ mGMSHP+ 					maintainer = "Koki Tsuyuzaki <k.t.the-answer@hotmail.co.jp>",
 mGMSHP+ 					author = "Koki Tsuyuzaki",
 mGMSHP+ 					destDir = destination,
 mGMSHP+ 					license="Artistic-2.0")
-Creating package in /var/folders/k0/tk8gl4bj2_v2mbjx80ydsznw0000gn/T//RtmpIFSPPT/file802e6e150d8/org.MeSH.Pae.db 
+Creating package in /var/folders/k0/tk8gl4bj2_v2mbjx80ydsznw0000gn/T//RtmphXOiOu/file17c653477416/org.MeSH.Pae.db 
 [1] TRUE
 \end{Soutput}
 \end{Schunk}
@@ -469,8 +772,16 @@ used for the MeSH enrichment analysis.
 \begin{Schunk}
 \begin{Sinput}
 > dim(geneid.cummeRbund)[1]
+\end{Sinput}
+\begin{Soutput}
+[1] 303
+\end{Soutput}
+\begin{Sinput}
 > dim(sig.geneid.cummeRbund)[1]
 \end{Sinput}
+\begin{Soutput}
+[1] 104
+\end{Soutput}
 \end{Schunk}
 \end{center}
 
@@ -520,6 +831,12 @@ the choice of a MeSH category, the annotation data used, and a total number of i
 \begin{Sinput}
 > meshR
 \end{Sinput}
+\begin{Soutput}
+MeSH enrichment analysis for category Diseases 
+Annotation package used:  org.MeSH.Hsa.db 
+The correspondance is retrived from:  gendoo 
+Number of MeSH terms identified:  9 
+\end{Soutput}
 \end{Schunk}
 \end{center}
 
@@ -531,6 +848,22 @@ This presents significantly enriched MeSH ID, MeSH term, and their associated $p
 \begin{Sinput}
 > head(summary(meshR))
 \end{Sinput}
+\begin{Soutput}
+       MESHID       Pvalue OddsRatio ExpCount Count Size              MESHTERM
+15774 D009361 0.0002619206  3.942771 11.32673    21   33 Neoplasm Invasiveness
+15775 D009361 0.0002619206  3.942771 11.32673    21   33 Neoplasm Invasiveness
+15776 D009361 0.0002619206  3.942771 11.32673    21   33 Neoplasm Invasiveness
+15777 D009361 0.0002619206  3.942771 11.32673    21   33 Neoplasm Invasiveness
+15778 D009361 0.0002619206  3.942771 11.32673    21   33 Neoplasm Invasiveness
+15779 D009361 0.0002619206  3.942771 11.32673    21   33 Neoplasm Invasiveness
+      GENEID SOURCEID
+15774   6387     <NA>
+15775   2932     <NA>
+15776   5566     <NA>
+15777  80725     <NA>
+15778  54658     <NA>
+15779   1287     <NA>
+\end{Soutput}
 \end{Schunk}
 \end{center}
 
@@ -545,6 +878,12 @@ For example, to choose the category as G (Phenomena and Processes) and the datab
 > meshR <- meshHyperGTest(meshParams)
 > meshR
 \end{Sinput}
+\begin{Soutput}
+MeSH enrichment analysis for category Phenomena and Processes 
+Annotation package used:  org.MeSH.Hsa.db 
+The correspondance is retrived from:  gene2pubmed 
+Number of MeSH terms identified:  9 
+\end{Soutput}
 \end{Schunk}
 \end{center}
 
@@ -557,23 +896,56 @@ This vignette was built on:
 > sessionInfo()
 \end{Sinput}
 \begin{Soutput}
-R version 3.1.1 (2014-07-10)
+R version 3.1.3 (2015-03-09)
 Platform: x86_64-apple-darwin13.4.0 (64-bit)
+Running under: OS X 10.10.2 (Yosemite)
 
 locale:
 [1] ja_JP.UTF-8/ja_JP.UTF-8/ja_JP.UTF-8/C/ja_JP.UTF-8/ja_JP.UTF-8
 
 attached base packages:
-[1] stats     graphics  grDevices utils     datasets  methods   base     
+[1] grid      parallel  stats     graphics  grDevices utils     datasets 
+[8] methods   base     
 
 other attached packages:
-[1] MeSHDbi_1.0.2
+ [1] meshr_1.3.4               MeSH.Syn.eg.db_1.2.1     
+ [3] MeSH.Bsu.168.eg.db_1.2.1  MeSH.Atu.K84.eg.db_1.2.1 
+ [5] MeSH.Aca.eg.db_1.2.1      MeSH.Hsa.eg.db_1.2.1     
+ [7] org.Hs.eg.db_2.14.0       cummeRbund_2.6.1         
+ [9] Gviz_1.8.4                rtracklayer_1.24.2       
+[11] GenomicRanges_1.16.4      IRanges_1.22.10          
+[13] fastcluster_1.1.16        reshape2_1.4.1           
+[15] ggplot2_1.0.1             Category_2.30.0          
+[17] GO.db_2.14.0              Matrix_1.1-5             
+[19] AnnotationDbi_1.26.1      GenomeInfoDb_1.0.2       
+[21] Biobase_2.24.0            BiocGenerics_0.10.0      
+[23] fdrtool_1.2.14            org.MeSH.Syn.db_1.2.0    
+[25] org.MeSH.Bsu.168.db_1.2.0 org.MeSH.Atu.K84.db_1.2.0
+[27] org.MeSH.Aca.db_1.2.0     org.MeSH.Hsa.db_1.2.0    
+[29] RSQLite_1.0.0             DBI_0.3.1                
+[31] MeSH.PCR.db_1.0.0         MeSH.AOR.db_1.0.0        
+[33] MeSH.db_1.2.0             MeSHDbi_1.2.7            
 
 loaded via a namespace (and not attached):
- [1] AnnotationDbi_1.26.1 Biobase_2.24.0       BiocGenerics_0.10.0 
- [4] DBI_0.3.1            GenomeInfoDb_1.0.2   IRanges_1.22.10     
- [7] parallel_3.1.1       RSQLite_1.0.0        stats4_3.1.1        
-[10] tools_3.1.1         
+ [1] acepack_1.3-3.3          annotate_1.42.1          base64enc_0.1-2         
+ [4] BatchJobs_1.6            BBmisc_1.9               BiocParallel_0.6.1      
+ [7] biomaRt_2.20.0           Biostrings_2.32.1        biovizBase_1.12.3       
+[10] bitops_1.0-6             brew_1.0-6               BSgenome_1.32.0         
+[13] checkmate_1.5.2          cluster_2.0.1            codetools_0.2-11        
+[16] colorspace_1.2-6         dichromat_2.0-0          digest_0.6.8            
+[19] fail_1.2                 foreach_1.4.2            foreign_0.8-63          
+[22] Formula_1.2-0            genefilter_1.46.1        GenomicAlignments_1.0.6 
+[25] GenomicFeatures_1.16.3   graph_1.42.0             GSEABase_1.26.0         
+[28] gtable_0.1.2             Hmisc_3.15-0             iterators_1.0.7         
+[31] lattice_0.20-30          latticeExtra_0.6-26      MASS_7.3-40             
+[34] matrixStats_0.14.0       munsell_0.4.2            nnet_7.3-9              
+[37] plyr_1.8.1               proto_0.3-10             RBGL_1.40.1             
+[40] RColorBrewer_1.1-2       Rcpp_0.11.5              RCurl_1.95-4.5          
+[43] rpart_4.1-9              Rsamtools_1.16.1         scales_0.2.4            
+[46] sendmailR_1.2-1          splines_3.1.3            stats4_3.1.3            
+[49] stringr_0.6.2            survival_2.38-1          tools_3.1.3             
+[52] VariantAnnotation_1.10.5 XML_3.98-1.1             xtable_1.7-4            
+[55] XVector_0.4.0            zlibbioc_1.10.0         
 \end{Soutput}
 \end{Schunk}
 
