--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,3 +1,7 @@
+VERSION 2.0.1
+------------------------
+   o CITATION was updated
+
 VERSION 2.0.0
 ------------------------
    o Specification changed as "AnnotationHub-style"
